--- a/packages/neon-api/package.json
+++ b/packages/neon-api/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "@cityofzion/neon-api",
-  "description": "Neon-API module: High level API for neon-js",
+  "name": "@epicchain/epicvault-api",
+  "description": "EpicVault-API Module is a high-level API layer built on top of the EpicVault-JS Core.",
   "version": "5.4.0",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CityOfZion/neon-js.git"
+    "url": "git+https://github.com/epicchainlabs/epicvault-js.git"
   },
   "publishConfig": {
     "access": "public"
   },
   "keywords": [
-    "neo",
+    "epicchain",
     "antshares",
     "javascript",
     "libraries"
   ],
-  "author": "Yak Jun Xiang <snowypowers@gmail.com> (https://github.com/snowypowers)",
+  "author": "xmoohad <xmoohad@epic-chain.org> (https://github.com/xmoohad)",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "lib/index.js",
@@ -35,7 +35,7 @@
     "test:unit": "jest /packages/.*/__tests__/.*"
   },
   "peerDependencies": {
-    "@cityofzion/neon-core": "^5.0.0"
+    "@epicchain/epicvault-core": "^5.0.0"
   },
   "files": [
     "dist/",
