--- a/packages/neon-core/package.json
+++ b/packages/neon-core/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "@cityofzion/neon-core",
-  "description": "Neon-JS Core functionality",
-  "version": "5.6.0",
+  "name": "@epicchain/epicvault-core",
+  "description": "EpicVault-JS Core is the foundational JavaScript library powering the EpicVault ecosystem.",
+  "version": "1.0.0",
   "engines": {
     "node": ">=16.19.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CityOfZion/neon-js.git"
+    "url": "git+https://github.com/epicchainlabs/epicvault-js.git"
   },
   "publishConfig": {
     "access": "public"
   },
   "keywords": [
-    "neo",
+    "epicchain",
     "antshares",
     "javascript",
     "libraries"
   ],
-  "author": "Yak Jun Xiang <snowypowers@gmail.com> (https://github.com/snowypowers)",
+  "author": "xmoohad <xmoohad@epic-chain.org> (https://github.com/xmoohad)",
   "license": "MIT",
   "main": "dist/index.js",
   "browser": "dist/browser.js",
