--- a/packages/epicvault-api/tsconfig.json
+++ b/packages/epicvault-api/tsconfig.json
@@ -4,6 +4,6 @@
     "rootDir": "src",
     "outDir": "lib"
   },
-  "references": [{ "path": "../neon-core" }],
+  "references": [{ "path": "../epicvault-core" }],
   "include": ["src/**/*"]
 }
