--- a/packages/epicvault-api/package.json
+++ b/packages/epicvault-api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@epicchain/epicvault-api",
   "description": "The EpicVault-API Module is an advanced API layer built on top of the EpicVault-JS Core, providing an enhanced interface for seamless interaction with the EpicVault platform.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/epicchainlabs/epicvault-js.git"
@@ -11,7 +11,7 @@
   },
   "keywords": [
     "epicchain",
-    "antshares",
+    "xmoohad",
     "javascript",
     "libraries"
   ],
@@ -35,7 +35,7 @@
     "test:unit": "jest /packages/.*/__tests__/.*"
   },
   "peerDependencies": {
-    "@epicchain/epicvault-core": "^5.0.0"
+    "@epicchain/epicvault-core": "^1.0.0"
   },
   "files": [
     "dist/",
