--- a/packages/epicvault-ledger/package.json
+++ b/packages/epicvault-ledger/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@epicchain/epicvault-ledger",
   "description": "EpicVault Ledger Integration for EpicVault.js enables secure and seamless hardware wallet support within the EpicVault ecosystem.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/epicchainlabs/epicvault-js.git"
@@ -11,7 +11,7 @@
   },
   "keywords": [
     "epicchain",
-    "antshares",
+    "xmoohad",
     "javascript",
     "libraries"
   ],
@@ -42,14 +42,14 @@
     "lodash": "4.17.21"
   },
   "peerDependencies": {
-    "@cityofzion/neon-core": "^5.3.0"
+    "@epicchain/epicvault-core": "^1.0.1"
   },
   "files": [
     "lib/",
     "typings/"
   ],
   "devDependencies": {
-    "@cityofzion/neon-js": "^5.6.0",
+    "@epicchain/epicvault-js": "^1.0.0",
     "@ledgerhq/hw-transport-node-hid": "6.27.12",
     "@ledgerhq/hw-transport-u2f": "5.36.0-deprecated",
     "@types/ledgerhq__hw-transport-node-hid": "4.22.2"
