--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "scripts": {
     "ae": "lerna run ae",
-    "clean": "lerna run clean",
-    "bootstrap": "lerna bootstrap",
+    "clean": "lerna run clean && rimraf node_modules",
+    "bootstrap": "lerna bootstrap --hoist",
     "build": "tsc -b",
+    "build:watch": "tsc -b --watch",
     "dist": "lerna run dist",
     "dist:prod": "lerna run dist:prod",
-    "lint": "eslint packages/**/src/**/*.ts packages/**/__tests__/**/*.ts packages/**/__integration__/**/*.ts --cache",
-    "lint:all": "eslint . --ignore-pattern '/**/dist/*' --cache",
-    "lint:misc": "eslint .  --cache --ignore-pattern '/**/dist/*' --ignore-pattern '/packages/' --ignore-pattern '/docs/'",
+    "lint": "eslint packages/**/src/**/*.ts packages/**/__tests__/**/*.ts packages/**/__integration__/**/*.ts --cache --fix",
+    "lint:all": "eslint . --ignore-pattern '/**/dist/*' --cache --fix",
+    "lint:misc": "eslint . --cache --fix --ignore-pattern '/**/dist/*' --ignore-pattern '/packages/' --ignore-pattern '/docs/'",
     "lint:docs": "prettier docs/**/*.md --write",
     "precommit": "npm run lint && npm run pretty",
     "prestart": "npm run build && npm run dist",
@@ -16,10 +17,12 @@
     "pretty": "prettier --write --loglevel=warn \"**/{src,__{tests,integration}__}/**/*.ts\"",
     "release:latest": "lerna publish from-package",
     "start": "jest --watch",
-    "test": "jest",
+    "test": "jest --coverage",
     "test:integration": "jest /packages/.*/__integration__/.*",
     "test:unit": "jest /packages/.*/__tests__/.*",
-    "version:latest": "lerna version --conventional-commits --no-changelog"
+    "version:latest": "lerna version --conventional-commits --no-changelog",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@microsoft/api-extractor": "^7.34.4",
@@ -33,8 +36,10 @@
     "cross-env": "7.0.3",
     "eslint": "8.36.0",
     "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "husky": "^8.0.3",
     "jest": "29.5.0",
     "jest-junit": "15.0.0",
     "jest-watch-typeahead": "2.2.2",
@@ -55,6 +60,11 @@
   ],
   "prettier": {
     "endOfLine": "auto",
-    "proseWrap": "always"
+    "proseWrap": "always",
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "printWidth": 100,
+    "tabWidth": 2,
+    "semi": true
   }
 }
